# yew-notifications

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-pr.yml  github-actions.yml
example/: Cargo.toml  index.html
example/src/: main.rs
examples/: README.md
examples/basic/: Cargo.toml  README.md  index.html
examples/basic/src/: main.rs
examples/custom/: README.md  index.html
examples/custom/src/: main.rs
examples/custom/src/notification/: component.rs  factory.rs  mod.rs
examples/terminal/: Cargo.toml  README.md  index.html
examples/terminal/src/: main.rs
examples/terminal/src/notification/: component.rs  factory.rs  mod.rs  utils.rs
examples/terminal/static/: styles.scss
src/: hook.rs  lib.rs  manager.rs  notification.rs  provider.rs  toaster.rs  utils.rs
src/notification/: component.rs  component_factory.rs  mod.rs
static/: notification.scss  notifications_provider.scss
