[package]
name = "yew-notifications"
description = "Notifications components library for Yew"
version = "0.1.1"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/TheBestTvarynka/yew-notifications"

[features]
standard-notification = []

[dependencies]
yew = { version = "0.21", default-features = false }
gloo = "0.8.0"

# logging
log = "0.4.17"

# utils
time = { version = "0.3.20", features = ["local-offset", "wasm-bindgen"] }
uuid = { version = "1.2.1", features = ["v4", "js"] }
