[package]
name = "yew-notifications"
description = "Toaster components library for Yew"
version = "0.2.0"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/TheBestTvarynka/yew-notifications"
homepage = "https://github.com/TheBestTvarynka/yew-notifications"
keywords = ["web", "webasm", "yew"]

[features]
standard-notification = []

[dependencies]
yew = { version = "0.21", default-features = false }
gloo = "0.11"

# logging
log = "0.4"

# utils
time = { version = "0.3", features = ["local-offset", "wasm-bindgen"] }
uuid = { version = "1.7", features = ["v4", "js"] }
