[package]
name = "basic-example"
description = "Simple web app that shows how to use standard notifications"
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-notifications = { path = "../../", features = ["standard-notification"] }
web-sys = "0.3"

# logging
wasm-logger = "0.2"
log = "0.4"

# utils
time = { version = "0.3", features = ["local-offset", "wasm-bindgen"] }
