[package]
name = "custom-example"
description = "Simple web app that shows how to use custom notifications"
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-notifications = { path = "../../" }
web-sys = "0.3"

# utils
uuid = { version = "1.7", features = ["v4", "js"] }
time = { version = "0.3", features = ["wasm-bindgen"] }

# logging
wasm-logger = "0.2"
log = "0.4"
